Version 2.2.027
    Fixed Ricocheted arrows losing some data after a ricochet
    Fixed concurrency issue with Folia regarding locale strings
    Fixed concurrency issue with Folia regarding COTW summons

Version 2.2.026
    Fixed NullPointerException on ChunkUnloadEvent

Version 2.2.025
    Fixed NullPointerException spam when processing XP for child skills

Version 2.2.024
    Fixed errors when Fishing or using Shake ability
    Significant optimizations made to reading new chunks for mcMMO
    Significant optimizations to most block interactions in mcMMO code
    Fixed a horrendous edge case where Tree Feller could cause a lot of lag

    Notes:
    Part of this update focused on optimization, there's improvements of around 30% in CPU time for most code involving block interactions in mcMMO, which happens to be most code in mcMMO.
    One of the optimizations made in this update removes an edge case where Tree Feller could cause a lot of lag, but the optimizations really are across the board in regards to any abilities that interact with blocks.

Version 2.2.023
    Compatibility with Minecraft 1.21.3
    (API) add causingPlayer to McMMOReplaceVanillaTreasureEvent and update Fish Event to use it (thanks bobcat4848 and Jacob Cuomo)

    Notes:
    Tested this version of mcMMO against 1.21.3, 1.21.1, and 1.19.4, which should be full coverage for all the changes, but it is possible you will run into things I didn't catch.
    Please report any errors or bugs to GitHub if you find them.

Version 2.2.022
    Fixed a bug where Roll was always reducing damage (thanks Ineusia)
    Fix COTW errors on older versions (thanks Warriorrrr)
    Fixed slimes spawning from slime division not inheriting tags. (thanks Ineusia)

Version 2.2.021
    Fixed issue where Roll wasn't reducing as much damage as it should have been (thanks Ineusia)
    Updated locale_es (thanks Devilcasters)
    Updated locale_lt_LT (thanks tautuxs)

Version 2.2.020