@@ -290,3 +290,10 @@ Salvageables:
     CARROT_ON_A_STICK:
         MinimumLevel: 0
         XpMultiplier: .5
+    CROSSBOW:
+        MinimumLevel: 0
+        XpMultiplier: 1
+    # Other
+    TRIDENT:
+        MinimumLevel: 0
+        XpMultiplier: 1
